k8s/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: docker-config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: http
          volumeMounts:
            - name: config-repo-volume
              mountPath: /config-repo
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: config-repo-volume
          configMap:
            name: config-repo-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: config-server
  type: ClusterIP
