k8s/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: docker-eureka-server:latest # Local Docker built image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: eureka-server
  type: ClusterIP
