k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-db
  type: ClusterIP
